rustdocs/errors/rust-bitcoin-bitcoin-src-blockdata-script-witness_version.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `opcodes`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:16:12
   |
16 | use crate::opcodes::all::*;
   |            ^^^^^^^ use of unresolved module or unlinked crate `opcodes`
   |
help: you might be missing a crate named `opcodes`, add it to your project and import it in your code
   |
10 + extern crate opcodes;
   |

error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:10:5
   |
10 | use core::convert::Infallible;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:12:5
   |
12 | use core::str::FromStr;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:11:5
   |
11 | use core::fmt;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:14:5
   |
14 | use internals::write_err;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
10 + extern crate internals;
   |

error[E0432]: unresolved import `crate::opcodes`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:17:12
   |
17 | use crate::opcodes::Opcode;
   |            ^^^^^^^ use of unresolved module or unlinked crate `opcodes`
   |
help: you might be missing a crate named `opcodes`, add it to your project and import it in your code
   |
10 + extern crate opcodes;
   |

error[E0432]: unresolved import `crate::parse_int`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:18:24
   |
18 | use crate::parse_int::{self, ParseIntError};
   |                        ^^^^ no `parse_int` in the root

error[E0432]: unresolved import `crate::script`
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:19:12
   |
19 | use crate::script::Instruction;
   |            ^^^^^^ use of unresolved module or unlinked crate `script`
   |
help: you might be missing a crate named `script`, add it to your project and import it in your code
   |
10 + extern crate script;
   |

error[E0405]: cannot find trait `TryFrom` in this scope
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:90:6
   |
90 | impl TryFrom<u8> for WitnessVersion {
   |      ^^^^^^^ not found in this scope
   |
   = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
   |
10 + use std::convert::TryFrom;
   |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:119:6
    |
119 | impl TryFrom<Opcode> for WitnessVersion {
    |      ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 10 + use std::convert::TryFrom;
    |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/bitcoin/src/blockdata/script/witness_version.rs:132:6
    |
132 | impl TryFrom<Instruction<'_>> for WitnessVersion {
    |      ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 10 + use std::convert::TryFrom;
    |

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0405, E0432, E0433.
For more information about an error, try `rustc --explain E0405`.
